initial pipelines controller test refactor