@@ -1,23 +1,24 @@
 package bio.terra.pipelines.controller;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import bio.terra.common.iam.BearerToken;
 import bio.terra.common.iam.BearerTokenFactory;
 import bio.terra.common.iam.SamUser;
 import bio.terra.common.iam.SamUserFactory;
 import bio.terra.pipelines.app.controller.PipelinesApiController;
 import bio.terra.pipelines.config.SamConfiguration;
+import bio.terra.pipelines.generated.model.ApiPipelinesGetResult;
 import bio.terra.pipelines.iam.SamService;
 import bio.terra.pipelines.service.PipelinesService;
 import bio.terra.pipelines.service.model.Pipeline;
-import java.util.Arrays;
+import bio.terra.pipelines.testutils.MockMvcUtils;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
-import java.util.UUID;
 import javax.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,11 +28,12 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 
 @ContextConfiguration(classes = PipelinesApiController.class)
 @WebMvcTest
-class PipelinesControllerTest {
-  @MockBean PipelinesService serviceMock;
+class PipelinesApiControllerTest {
+  @MockBean PipelinesService pipelinesServiceMock;
   @MockBean SamUserFactory samUserFactoryMock;
   @MockBean BearerTokenFactory bearerTokenFactory;
   @MockBean SamConfiguration samConfiguration;
@@ -39,13 +41,9 @@ class PipelinesControllerTest {
 
   @Autowired private MockMvc mockMvc;
 
-  private List<Pipeline> pipelineList =
-      Arrays.asList(new Pipeline("imputation", "", ""), new Pipeline("get_file_size", "", ""));
-  private SamUser testUser =
-      new SamUser(
-          "test@email",
-          UUID.randomUUID().toString(),
-          new BearerToken(UUID.randomUUID().toString()));
+  private final List<Pipeline> testPipelineList =
+      List.of(MockMvcUtils.TEST_PIPELINE_1, MockMvcUtils.TEST_PIPELINE_2);
+  private SamUser testUser = MockMvcUtils.TEST_SAM_USER;
 
   @BeforeEach
   void beforeEach() {
@@ -53,20 +51,20 @@ class PipelinesControllerTest {
   }
 
   @Test
-  void testGetMessageOk() throws Exception {
-    when(serviceMock.getPipelines()).thenReturn(pipelineList);
+  void testGetPipelinesOk() throws Exception {
+    when(pipelinesServiceMock.getPipelines()).thenReturn(testPipelineList);
 
-    mockMvc
-        .perform(get("/api/pipelines/v1alpha1"))
-        .andExpect(status().isOk())
-        .andExpect(content().contentType(MediaType.APPLICATION_JSON));
-    //            .andExpect(content().string(example.message()));
+    MvcResult result =
+        mockMvc
+            .perform(get("/api/pipelines/v1alpha1"))
+            .andExpect(status().isOk())
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+            .andReturn();
+
+    ApiPipelinesGetResult response =
+        new ObjectMapper()
+            .readValue(result.getResponse().getContentAsString(), ApiPipelinesGetResult.class);
+
+    assertEquals(testPipelineList.size(), response.size());
   }
-
-  //  @Test
-  //  void testGetMessageNotFound() throws Exception {
-  //    when(serviceMock.getExampleForUser(testUser.getSubjectId())).thenReturn(Optional.empty());
-  //
-  //    mockMvc.perform(get("/api/example/v1/message")).andExpect(status().isNotFound());
-  //  }
 }
